[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compliancegrid"
version = "1.0.0"
description = "Official Python SDK for the ComplianceGrid API — export compliance, screening, HS codes, and 12+ regulatory domains."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "ComplianceGrid", email = "engineering@compliancegrid.ai"}]
keywords = ["compliancegrid", "compliance", "export-control", "sanctions", "screening", "hs-codes", "trade-compliance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["httpx>=0.25.0"]

[project.urls]
Homepage = "https://www.compliancegrid.ai"
Documentation = "https://www.compliancegrid.ai/reference"
Repository = "https://github.com/ComplianceGrid/compliancegrid-python"

[tool.setuptools.packages.find]
where = ["src"]
